--- a/helm-charts/values.yaml
+++ b/helm-charts/values.yaml
@@ -25,7 +25,6 @@ fullnameOverride: ""
 podAnnotations: {}
 podSecurityContext: {}
 securityContext: {}
-nodeSelector:
-  dedicated: mhddos
+nodeSelector: {}
 tolerations: []
 affinity: {}
